hello_world/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: nginxdemos/hello
        name: hello-world
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "384Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          protocol: TCP
          name: hello-world
