hello_world/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
    - name: hello-world
      protocol: TCP
      port: 80
      targetPort: 80
